Ajout du livre elastic search + mise en page

--- a/rapport/sources.tex
+++ b/rapport/sources.tex
@@ -9,7 +9,6 @@
 \textbf{Articles sur les performances des SGBD vs moteurs d'indexation}\\
 {\footnotesize \url{http://jolicode.com/blog/elasticsearch-comme-nouveau-standard-de-la-recherche-applicative}}\\[1mm]
 
-
 \textbf{Documentation de logstash générale}\\
 \url{http://logstash.net/docs/1.4.2/}\\
 \url{http://logstash.net/docs/1.4.2/flags}\\[1mm]
@@ -30,10 +29,9 @@
 \url{http://blog.trifork.com/2014/01/07/elasticsearch-how-many-shards/}\\
 {\footnotesize \url{http://stackoverflow.com/questions/12409438/when-do-you-start-additional-elasticsearch-nodes}}\\[1mm]
 
-
 \textbf{Documentation de Kibana}\\
 \url{http://www.elastic.co/guide/en/kibana/current/}\\
-\url{https://github.com/elastic/kibana/tree/master/docs}\\[1mm]
+\url{https://github.com/elastic/kibana/tree/master/docs}\\[3mm]
 
 
 {\huge Livres}\\[5mm]
@@ -41,10 +39,14 @@
 \textbf{The logstash book}\\
 \url{http://www.logstashbook.com/}\\[1mm]
 
+\textbf{Elasticsearch: The Definitive Guide}\\
+\url{http://shop.oreilly.com/product/0636920028505.do}\\[1mm]
+
 \textbf{Rapport projet tutoré ASRALL sur les MOM}\\
-\url{http://webloria.loria.fr/~lnussbau/ptasrall2015/rapport\_a\_mom.pdf}\\[1mm]
+\url{http://webloria.loria.fr/~lnussbau/ptasrall2015/rapport\_a\_mom.pdf}\\[3mm]
+
 
 {\huge Vidéos}\\[5mm]
 
 \textbf{Conférence de Jean Baptiste Favre, architecte réseau blablacar, PSES 2014}\\
-\url{http://numaparis.ubicast.tv/videos/kibana/}
+\url{http://numaparis.ubicast.tv/videos/kibana/}\\[3mm]
