--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -46,7 +46,8 @@
 \newcommand{\inco}{%
 \fontfamily{\ttdefault}\fontseries{b}\fontsize{10}{10}\selectfont}
 \newcommand{\ipath}[1]{{\inco \normalsize {#1}}}
-\newcommand{\fnu}[1]{\footnote{\url{#1}}}
+%\newcommand{\fnu}[1]{\footnote{\url{#1}}}
+\newcommand{\fnu}[2][]{\footnote{{#1}\url{#2}}}
 
 
 %%% header & footer
