ajout intro elasticsearch

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -1,9 +1,33 @@
+\begin{figure}[H]
+\center
+\includegraphics[width=0.2\textwidth]{elasticsearch.png}
+\label{fig:elasticsearchlogo.png}
+\end{figure}
+%\begin{wrapfigure}{r}{0.25\textwidth}
+%\begin{center}
+%\includegraphics[width=0.25\textwidth]{elasticsearch.png}
+%\end{center}
+%\caption{A gull}
+%\end{wrapfigure}
 \section{Présentation de Elasticsearch}
+Elasticsearch est moteur de recherche et d'analyse en temps réel. Il permet l'exploration
+de données de façon très rapide par des recherches, que ce soit par des recherches
+\gls{fulltext}, ou bien des recherches structurées.
 
+Elasticsearch est depuis peu développé par la société \emph{Elastic}. C'était, à 
+la base, un projet du développeur Shay Banon, qui souhaitait concevoir une API simplifié
+pour la bibliothèque de moteur de recherche : Apache Lucene\fnu[Page du projet Lucene ]{https://lucenenet.apache.org/}.
+
+Elasticsearch et la stack ELK est en passe de devenir un standard dans l'industrie.
+En effet le logiciel à une utilisation assez versatile, de l'aide à la prise de 
+décision en temps réelle à l'analyse de code source. Et à l'heure actuelle, la capacité 
+à exploiter les masses de données et de méta données accumulées chaque jour devient 
+un enjeu économique majeur (mais pas seulement \ldots). Enfin l'un des principaux 
+atouts d'Elasticsearch réside dans son aptitude à pouvoir passer à l'échelle simplement.
 
 \section{Installation}
 Avant même de regarder les différentes dépendances nécessaires à l'utilisation de
-elasticsearch il est recommandé devérifier que l'on utilise bien la même version
+Elasticsearch il est recommandé de vérifier que l'on utilise bien la même version
 que son compère logstash (vérifier la documentation).
 
 Son installation est sensiblement la même que son comparse logstash puisque ce logiciel 
