--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -2,16 +2,16 @@
                              description={Un drapeau, dans la dénomination logstash, le flag représente une option passé en argument exemple : -w.
 }}
 
-\newglossaryentry{logs}{name={logs},
-                             description={Un log c'est une buche !
-}}
-
 \newglossaryentry{cluster}{name={cluster},
                              description={Cluster ou grappe. Un cluster est constitué d'un ou plusieurs nodes qui partagent le même \emph{cluster.name}
 }}
 
 \newglossaryentry{document}{name={document},
                              description={Un document, dans la terminologie elasticsearch, est constitué d'un ou plusieurs nodes qui partagent le même \emph{cluster.name}
+}}
+
+\newglossaryentry{fulltext}{name={fulltext},
+                             description={Un drapeau, dans la dénomination logstash, le flag représente une option passé en argument exemple : -w.
 }}
 
 \newglossaryentry{index}{name={index},
@@ -21,6 +21,10 @@
 \newglossaryentry{lucene}{name={lucene},
                              description={Apache Lucene 
 }}
+\newglossaryentry{logs}{name={logs},
+                             description={Un log c'est une buche !
+}}
+
 \newglossaryentry{mapping}{name={mapping},
                              description={Le mapping. Dans la terminologie elasticsearch, un node est processus java 
 }}
