--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -1,3 +1,8 @@
+\begin{figure}[H]
+\center
+\includegraphics[width=0.2\textwidth]{logstash.png}
+\label{fig:logstashlogo.png}
+\end{figure}
 \section{Présentation de Logstash}
 
 \subsection{Pourquoi Logstash?}
