--- a/rapport/codeconf.tex
+++ b/rapport/codeconf.tex
@@ -88,7 +88,7 @@ frame=tb,
 breaklines=true
 columns=fullflexible,
 morekeywords={input,filter,output},
-morekeywords=[2]{stdin,stdout,grok,syslog},
+morekeywords=[2]{email,file,grok,redis,stdin,stdout,syslog,throttle},
 morekeywords=[3]{fromage},
 captionpos=b
 }
