avancée dans logstash

--- a/rapport/logstash.tex
+++ b/rapport/logstash.tex
@@ -313,8 +313,8 @@ deux situés dans le répertoire par défaut des fichiers de configuration de Lo
 \ipath{/etc/logstash/conf.d/}. Ils sont lus par ordre alphabétique et concaténés 
 (comprendre que les inputs ainsi que les outputs sont fusionnés, il faut donc être
 rigoureux dans leur écriture afin de ne pas créer d'effets de bord indésirables).
-Une bonne pratique consiste, à utiliser la convention de nommage suivante : \textit{00-description,
-01-description} etc \ldots
+Une bonne pratique consiste, à utiliser la convention de nommage suivante : \textit{
+00-description, 01-description} etc \ldots
 
 
 Chacun possède un bloc input, output et l'un d'entre eux : filter.
