--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -118,6 +118,10 @@ les fonctions et fonctionnement des outils dont nous ferons usage, enfin, nous d
 architecture et ses évolutions possibles.
 
 
+\chapter{Environnement}
+\section{Sous Direction des Infrastructures}
+\lipsum
+\section{Environnement de travail}
 
 \chapter{La gestion de logs}
 
@@ -138,7 +142,6 @@ quotidiennement ces \gls{logs} afin de pouvoir détécter un comportement suspec
 \chapter{MoM}
 
 \lipsum
-\lipsum
 
 \chapter{Gestion de projet}
 \lipsum
@@ -155,6 +158,18 @@ quotidiennement ces \gls{logs} afin de pouvoir détécter un comportement suspec
 \chapter{Elasticsearch}
 \input{elasticsearch.tex}
 
+\chapter{Kibana}
+\lipsum
+\input{kibana.tex}
+
+\part{Synthèse et conclusion}
+\chapter{Fonctionnement général}
+
+\chapter{Évolutions possible}
+\section{Monitoring}
+\section{Sécutrité}
+
+\chapter{Conclusion}
 
 \part{Annexes}
 \chapter{Sources/Webographie/Bibliographie}
