Correction de coquille

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -167,7 +167,7 @@ quotidiennement ces \gls{logs} afin de pouvoir détécter un comportement suspec
 
 \chapter{Évolutions possible}
 \section{Monitoring}
-\section{Sécutrité}
+\section{Sécurité}
 
 \chapter{Conclusion}
 
