Corrections et ajouts minimes

--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -73,6 +73,7 @@ chrome://extension => Developer mode => Load unpacked extension.
 \caption{Plugin Sense installé dans chromium}
 \end{figure}
 
-Et voilà !
+Et voilà ! \footnotesize{(avec un accent anglais)}
 
 \subsection{Utilisation de Sense}
+
