--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -76,3 +76,9 @@ chrome://extension => Developer mode => Load unpacked extension.
 Et voilà !
 
 \subsection{Utilisation de Sense}
+L'utilisation de sense est assez simple via son interface, la complexité se situe 
+plutôt du coté de la .... elasticsearch
+
+\begin{center}
+\includegraphics[width=15cm]{sensegui.png}
+\end{center}
