ajout de xcolor

--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -19,6 +19,7 @@
 %\usepackage[bottom=2.5cm,left=2.5cm,right=2.5cm]{geometry}
 \usepackage[bottom=2.8cm]{geometry}
 \usepackage{graphicx}
+\usepackage{xcolor}
 \usepackage[acronym]{glossaries}
 \usepackage[hidelinks]{hyperref}
 \usepackage{lipsum}
