--- a/rapport/glossaire.tex
+++ b/rapport/glossaire.tex
@@ -1,3 +1,7 @@
+\newglossaryentry{API}{name={API},
+                             description={Une API, Application Programming Interface, est une interface permettant d'interagir avec un programme par l'intermédiaire d'"opérations simples". Elles sont en générale la pour faciliter la réutilisation d'un programme plus complexe. C'est parce que openstreetmap à une API que l'on a vu autant de logiciels utilisant ses cartes/tuiles.
+}}
+
 \newglossaryentry{flag}{name={flag},
                              description={Un drapeau, dans la dénomination logstash, le flag représente une option passé en argument exemple : -w.
 }}
