Ajout capition position to code

--- a/rapport/codeconf.tex
+++ b/rapport/codeconf.tex
@@ -62,6 +62,7 @@ breaklines=true
 columns=fullflexible,
 backgroundcolor=\color{black},
 %backgroundcolor=\color{white},%for printing
+captionpos=b
 %linewidth=0.9\linewidth,
 %xleftmargin=0.1\linewidth
 }
