--- a/rapport/elasticsearch.tex
+++ b/rapport/elasticsearch.tex
@@ -145,7 +145,7 @@ La directive PUT est utilisé pour renseigner de nouvelles informations dans Ela
 
 
 Dans notre projet d'analyse de logs, il est fréquent que nous dussions supprimer 
-des index, notamment dans le cas de paramétrage des \emph{mappings}, mais également
+des index, notamment dans le cas du paramétrage des \emph{mappings}, mais également
 pour soulager notre infrastructure du poids des logs de firewall (~20-30Go/jours).\\
 
 \textbf{DELETE  {\color{grey} http://100.127.255.1:9200}/{\color{red}twitter}/}\\
